# anchor-rust-test

./: Anchor.toml  Cargo.toml  package.json  readme.md
_tests/src/: lib.rs  lite_svm.rs  test_increment.rs  test_initialize.rs
programs/anchor-rust-test/: Cargo.toml
programs/anchor-rust-test/src/: lib.rs
tests/: Cargo.toml  test.ts
tests/src/: lib.rs  lite_svm.rs  test_initialize.rs
